* write recipe some part

--- a/RecipeWorld/RecipeWorld/Content/Site.css
+++ b/RecipeWorld/RecipeWorld/Content/Site.css
@@ -22,3 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+/* Suim */
+.form-control{
+    height:35px;
+}
+
+form div{
+    margin-bottom:10px;
+}
