--- a/RecipeWorld/RecipeWorld/Views/WriteRecipe/Index.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/WriteRecipe/Index.cshtml
@@ -1,55 +1,75 @@
 ﻿@model RecipeWorld.ViewModel.RecipeFormViewModel
 @{
-    /**/
+                /**/
 
-    ViewBag.Title = "Index";
+                ViewBag.Title = "Write Recipe";
 }
 
-@if (Model.Recipe.Id == 0)
+<h2></h2><br />
+<style>
+    .dynamicimg {
+        width: 90%;
+        max-width: 350px;
+        margin: auto;
+        margin-top: 10px;
+    }
+</style>
+@using (Html.BeginForm("Save", "WriteRecipe", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    <h2>Write new recipe</h2>
-}
-else
-{
-    <h2>Update recipe</h2>
+    <fieldset class="form-horizontal">
+        @if (Model.Recipe.Id == 0)
+        {
+            <legend>Share your secrete recipe</legend>
+        }
+        else
+        {
+            <legend>Update new recipe</legend>
+        }
+
+        @Html.HiddenFor(m => m.Recipe.Id)
+        @Html.HiddenFor(m => m.Recipe.Email)
+        @Html.HiddenFor(m => m.Recipe.CreateDate)
+        @Html.HiddenFor(m => m.Recipe.ModifiedDate)
+        @Html.HiddenFor(m => m.Recipe.ViewCount)
+        <div class="form-group" id="upload-image-div">
+            <div class="col-lg-6 ">
+                <div class="fileBox">
+                    <label for="RecipeFiles" class="btn_file">Image</label>
+                    <input type="file" id="RecipeFiles" name="RecipeFiles" class="custom_file" accept="image/*" onchange="loadFile(event);" multiple>
+                </div>
+            </div>
+            <div class='col-lg-10 preview' id="dynamicImage">
+
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-lg-10">
+                @Html.TextBoxFor(m => m.Recipe.Title, new { @class = "form-control", @placeholder = "Title" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-lg-10">
+                @Html.TextAreaFor(m => m.Recipe.Ingredients, new { @class = "form-control", @rows = "5", @placeholder = "Ingredients" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-lg-10">
+                @Html.TextAreaFor(m => m.Recipe.Contents, new { @class = "form-control", @rows = "10", @placeholder = "Recipe" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-lg-10 col-lg-offset-3">
+                <button type="submit" class="btn btn-primary">Save Recipe</button>
+            </div>
+        </div>
+    </fieldset>
 }
 
-@using (Html.BeginForm("Save", "WriteRecipe"))
-{
-    @Html.ValidationSummary(true, "Please fix the form")
-    <div>
-        <p>@Model.Recipe.User.Email</p>
-        <p>@Model.Recipe.CreateDate</p>
-        <p>@Model.Recipe.ModifiedDate</p>
-        @Html.HiddenFor(b => b.Recipe.User.Email)
-        @Html.HiddenFor(b => b.Recipe.CreateDate)
-        @Html.HiddenFor(b => b.Recipe.ModifiedDate)
-    </div>
-    <div>
-        <div class="col col-sm-12">
-            @Html.LabelFor(r => r.Recipe.Title)
-            @Html.TextBoxFor(r => r.Recipe.Title, new { @class = "form-control" })
-            @Html.ValidationMessageFor(r => r.Recipe.Title)
-        </div>
-    </div>
-    <div>
-        <div class="col col-sm-12">
-            @Html.LabelFor(r => r.Recipe.Ingredients)
-            @Html.TextAreaFor(r => r.Recipe.Ingredients, new { @class = "form-control", @rows = 5 })
-            @Html.ValidationMessageFor(r => r.Recipe.Ingredients)
-        </div>
-    </div>
-    <div>
-        <div class="col col-sm-12">
-            @Html.LabelFor(r => r.Recipe.Contents)
-            @Html.TextAreaFor(r => r.Recipe.Contents, new { @class = "form-control", @rows = 10 })
-            @Html.ValidationMessageFor(r => r.Recipe.Contents)
-        </div>
-    </div>
-
-    @Html.HiddenFor(b => b.Recipe.Id)
-    @Html.HiddenFor(b => b.Recipe.ViewCount)
-    <br />
-    @Html.AntiForgeryToken()
-    <button type="submit" class="btn btn-primary">Save Recipe</button>
-}
+<script>
+    var loadFile = function (event) {
+        var files = event.target.files;
+        for (var i = 0; i < files.length; i++) {
+            $("#dynamicImage").append("<img src='" + URL.createObjectURL(event.target.files[i]) + "' class='dynamicimg' /><br/>");
+        }
+    }
+</script>
