--- a/RecipeWorld/RecipeWorld/Views/WriteRecipe/Index.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/WriteRecipe/Index.cshtml
@@ -7,6 +7,38 @@
 
 <h2></h2><br />
 <style>
+    input,
+    select,
+    textarea {
+        max-width: 400px;
+    }
+
+    .fileBox .btn_file {
+        display: inline-block;
+        border: 1px solid #93c54b;
+        width: 100%;
+        height: 35px;
+        font-size: 0.8em;
+        color: #93c54b;
+        line-height: 35px;
+        text-align: center;
+        vertical-align: middle;
+        border-radius: 2em;
+        max-width: 400px;
+    }
+
+    .fileBox .custom_file {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0,0,0,0);
+        border: 0;
+        max-width: 400px;
+    }
+
     .dynamicimg {
         width: 90%;
         max-width: 350px;
