--- a/RecipeWorld/RecipeWorld/Views/Home/Index.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Home/Index.cshtml
@@ -1,12 +1,58 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div id="Title">
+    <h1 style="text-align:center">WELCOME TO THE WORLD RECIPES BLOG</h1>
 </div>
+<br />
+<br />
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+        <div class="item active">
+            
+            <img src="~/RecipeImageFiles/1_1.jpg" alt="Recipe 1" style="width:100%; height:80%">
+            <div class="carousel-caption" >
+                <h3>Sushi recipes</h3>
+                <p>Recipes for all tastes</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/RecipeImageFiles/2_1.jpg" alt="Recipe 2" style="width:100%;height:80%">
+            <div class="carousel-caption" style="background-color:lightgoldenrodyellow">
+                <h3>Chow Mein</h3>
+                <p>Recipes from around the world</p>
+            </div>
+        </div>
+
+        <div class="item">           
+            <img src="~/RecipeImageFiles/3_1.jpg" alt="Recipe 3" style="width:100%;height:80%">
+            <div class="carousel-caption" style="background-color:navy">
+                <h3 class="text-success">Falafel</h3>
+                <p class="text-success">Recipes for all occasions</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
 
 <div class="row">
     <div class="col-md-4">
