--- a/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
@@ -15,6 +15,7 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("Recipe", "Index", "Recipe")</li>
+                <li>@Html.ActionLink("Share Recipe", "New", "Recipe")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
