RecipeFile Controller test

--- a/RecipeWorld/RecipeWorld/Views/Home/Index.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<div id="Title">
-    <h1 style="text-align:center">WELCOME TO THE WORLD RECIPES BLOG</h1>
+<div id="TitleHome">
+    <h1 >WELCOME TO THE WORLD RECIPES BLOG</h1>
 </div>
 <br />
 <br />
