--- a/RecipeWorld/RecipeWorld/Content/Site.css
+++ b/RecipeWorld/RecipeWorld/Content/Site.css
@@ -23,7 +23,7 @@ textarea {
     max-width: 400px;
 }
 
-<<<<<<< HEAD
+
 form div{
     margin-bottom:10px;
 }
@@ -31,5 +31,9 @@ form div{
 .carousel-caption {
     background-color:navy;
 }
-=======
->>>>>>> 29afcad2b6a97749e37b918cf640f910efcf36ad
+
+h1 {
+
+    text-align:center;
+}
+
