--- a/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("Recipe", "Index", "Recipe")</li>
+                <li>@Html.ActionLink("Recipe", "Index", "RecipeFile")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
