--- a/RecipeWorld/RecipeWorld/Views/Recipe/Index.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Recipe/Index.cshtml
@@ -58,7 +58,7 @@
                 }
                 <div class="col-sm-3">
                     <div class="image_cell crop">
-                        <a href="@Url.Action("Index", "ReadRecipe")">
+                        <a href="@Url.Action("Index", "ReadRecipe", new { id = viewModel.Recipe.Id })">
                             <img src="~/RecipeImageFiles/@viewModel.RecipeFiles.First().ImgFile" style="width:90%;margin:auto;padding-bottom:10px" />
                         </a>
                     </div>
