--- a/RecipeWorld/RecipeWorld/Views/Recipe/New.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Recipe/New.cshtml
@@ -5,6 +5,14 @@
 
 <h2></h2><br />
 <style>
+    .field-validation-error {
+        color: rgb(244, 124, 60);
+    }
+
+    .input-validation-error {
+        border: 1px solid rgb(244, 124, 60);
+    }
+
     input,
     select,
     textarea {
@@ -75,16 +83,19 @@
         <div class="form-group">
             <div class="col-lg-10">
                 @Html.TextBoxFor(m => m.Recipe.Title, new { @class = "form-control", @placeholder = "Title" })
+                @Html.ValidationMessageFor(m => m.Recipe.Title)
             </div>
         </div>
         <div class="form-group">
             <div class="col-lg-10">
                 @Html.TextAreaFor(m => m.Recipe.Ingredients, new { @class = "form-control", @rows = "5", @placeholder = "Ingredients" })
+                @Html.ValidationMessageFor(m => m.Recipe.Ingredients)
             </div>
         </div>
         <div class="form-group">
             <div class="col-lg-10">
                 @Html.TextAreaFor(m => m.Recipe.Contents, new { @class = "form-control", @rows = "10", @placeholder = "Recipe" })
+                @Html.ValidationMessageFor(m => m.Recipe.Contents)
             </div>
         </div>
         <div class="form-group">
@@ -94,10 +105,15 @@
         </div>
     </fieldset>
 }
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
 
 <script>
     var loadFile = function (event) {
         var files = event.target.files;
+        $(".dynamicimg").remove();
         for (var i = 0; i < files.length; i++) {
             $("#dynamicImage").append("<img src='" + URL.createObjectURL(event.target.files[i]) + "' class='dynamicimg' /><br/>");
         }
