--- a/RecipeWorld/RecipeWorld/Views/Recipe/Index.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Recipe/Index.cshtml
@@ -66,7 +66,7 @@
                         <p>@viewModel.Recipe.CreateDate.ToShortDateString()</p>
                     </div>
                     <div style="padding:10px 15px;font-family:Arial;">
-                        <a href="@Url.Action("Index", "ReadRecipe")">@viewModel.Recipe.Title</a>
+                        <a href="@Url.Action("Index", "ReadRecipe", new { id = viewModel.Recipe.Id })">@viewModel.Recipe.Title</a>
                     </div>
                 </div>
                 index++;
