--- a/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
@@ -11,7 +11,7 @@
 </style>
 
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse">
     <div class="container-fluid" >
         <div class="navbar-header" style="margin-left:200px">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
@@ -25,22 +25,14 @@
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-<<<<<<< HEAD
+
             <ul class="nav navbar-nav" id="nav navbar-nav">
                 <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav navbar-navli" })</li>
 
-                <!--<li>@Html.ActionLink("Recipe", "Index", "RecipeFile")</li>-->
-
                 <li>@Html.ActionLink("Recipe", "Index", "Recipe")</li>
                 <li>@Html.ActionLink("Share Recipe", "New", "Recipe")</li>
 
-=======
-            <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("Recipe", "Index", "RecipeFile")</li>
-                <li>@Html.ActionLink("Recipe", "Index", "Recipe")</li>
-                <li>@Html.ActionLink("Share Recipe", "New", "Recipe")</li>
->>>>>>> 4c9b690f2659e1e5a58a0dc562c028156c7433f9
+
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
