--- a/RecipeWorld/RecipeWorld/Views/ReadRecipe/Index.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/ReadRecipe/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@model RecipeWorld.ViewModel.RecipeFormViewModel
-@{
+﻿@{@model RecipeWorld.ViewModels.RecipeViewModel
+
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -12,11 +12,11 @@
         </tr>
     </thead>
     <tbody>
-        <!-- I am working i need. I recive error so i can't test -->
+        <!-- I am working i need. I recive error so i can't test 
         @foreach (var item in Model.RecipeFiles)
         {
             @Html.DisplayFor(m => item.ImgFile)
-        }
+        }-->
     </tbody>
 </table>
 
@@ -25,32 +25,17 @@
 
 <div>
     <div>
-        <img src="~/RecipeImageFiles/2_1.jpg" style="width:70%;margin:auto" />
+        <img src="~/RecipeImageFiles/@Model.RecipeFiles.First().ImgFile"/>
     </div>
     <div>
         <h3>Ingredients</h3>
-        <p>1 cup flour</p>
-        <p>1/2 packed cup shredded parmesan</p>
-        <p>1 teaspoon baking powder</p>
-        <p>1/2 teaspoon salt</p>
-        <p>1/4 teaspoon baking soda</p>
-        <p>1/4 teaspoon black pepper, plus extra for the tops if desired</p>
-        <p>2 tablespoons thinly sliced chives</p>
-        <p>1/3 cup sour cream, chilled</p>
-        <p>1/4 cup plus 1 tablespoon milk, chilled</p>
-        <p>2 tablespoons unsalted butter, melted for brushing on biscuit tops</p>
+        @Html.DisplayFor(m => m.Recipe.Ingredients)
+        
     </div>
     <div>
         <h3>Recipe</h3>
-        <p>
-            Preheat the oven to 400°F.
-
-            In a bowl, whisk together the flour, parmesan, baking powder, salt, baking soda, pepper, and chives.
-
-            Stir in the sour cream until the mixture resembles coarse grains. Add the chilled milk and fold until it just comes together.
-
-            Scoop the batter by the 1/4 cup (I use a ice cream scoop) onto parchment paper lined sheets, 1 inch apart. Bake for 15 minutes, remove and brush with melted butter. Bake for another 5-7 minutes or until golden brown.
-        </p>
+        @Html.DisplayFor(m => m.Recipe.Contents)
+       
     </div>
 
     <div id="comment_div">
@@ -89,8 +74,7 @@
             </div>
         </div>
     </div>
-<<<<<<< HEAD
-    </div>
-=======
+
 </div>
->>>>>>> c47192e9405979ac2070b7ca97481bb1ef95cd91
+
+
