--- a/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
@@ -1,22 +1,38 @@
-﻿<nav class="navbar navbar-inverse" margin-left:200px">
-    <div class="container-fluid" style="margin-left:200px">
-        <div class="navbar-header" >
+﻿<style>
+    .navbar-header {
+        margin-left: 200px;
+    }
+    .navbar-brand {
+        font:35px;
+
+    }
+   
+
+</style>
+
+
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid" >
+        <div class="navbar-header" style="margin-left:200px">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("World Recipes Blog", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <!--<a class="navbar-brand" href="#">World Recipes Blog</!--a>-->
+            @Html.ActionLink("WORLD RECIPE BLOG", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-            <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("Recipe", "Index", "RecipeFile")</li>
+
+            <ul class="nav navbar-nav" id="nav navbar-nav">
+                <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav navbar-navli" })</li>
+
                 <li>@Html.ActionLink("Recipe", "Index", "Recipe")</li>
                 <li>@Html.ActionLink("Share Recipe", "New", "Recipe")</li>
+
+
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
