* ContactForm and About page

--- a/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
@@ -34,7 +34,7 @@
 
 
                 <li>@Html.ActionLink("About", "About", "Home")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Contact", "Create", "Contact")</li>
             </ul>
             @Html.Partial("_LoginPartial")
             
