--- a/RecipeWorld/RecipeWorld/Views/ReadRecipe/Index.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/ReadRecipe/Index.cshtml
@@ -52,7 +52,7 @@
             <textarea class="form-control" id="contents" name="contents" rows="3"></textarea>
             <br />
             <div class="d-flex justify-content-end">
-                <button type="button" class="btn btn-outline-primary btn-sm" name="save_comment" id="save_comment" onclick="save_comment(38, 0, 'contents');">Save</button>
+                <button type="button" class="btn btn-success btn-lg btn-sm" name="save_comment" id="save_comment" onclick="save_comment(38, 0, 'contents');">Save</button>
             </div>
         </div>
         <hr>
@@ -63,12 +63,12 @@
                 <p style="font-size:10px;">2018-06-19 21:13:54</p>
                 <div class="row">
                     <div class="col col-sm-6">
-                        <a class="btn btn-outline-primary btn-sm" data-toggle="collapse" href="#reply1" role="button" aria-expanded="false" aria-controls="reply1">
+                        <a class="btn btn-success btn-lg btn-sm" data-toggle="collapse" href="#reply1" role="button" aria-expanded="false" aria-controls="reply1">
                             Comments 0
                         </a>
                     </div>
                     <div class="col col-sm-6 d-flex justify-content-end">
-                        <button type="button" class="btn btn-outline-primary btn-sm" name="delete_comment" id="delete_comment" onclick="delete_comment(38, 23, 0);">Delete</button>
+                        <button type="button" class="btn btn-success btn-sm" name="delete_comment" id="delete_comment" onclick="delete_comment(38, 23, 0);">Delete</button>
                     </div>
                 </div>
             </div>
