--- a/RecipeWorld/RecipeWorld/Views/Recipe/Index.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Recipe/Index.cshtml
@@ -81,7 +81,7 @@
         }
         <div style="width:50px;margin:auto;margin-top:50px;">
             <p>
-                @Html.ActionLink("More Recipe", "Index", "Recipe", new { Page=ViewBag.Page+1 }, new { @class = "btn btn-warning" })
+                @Html.ActionLink("More Recipe", "Index", "Recipe", new { Page=ViewBag.Page+1 }, new { @class = "btn btn-success" })
             </p>
         </div>
 
