Read Page Presentable

--- a/RecipeWorld/RecipeWorld/Views/Home/About.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Home/About.cshtml
@@ -20,10 +20,10 @@
     </script>
     <!--//meta tags ends here-->
     <!--booststrap-->
-    <link href="/Content/About/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+    <!--link href="/Content/About/css/bootstrap.css" rel="stylesheet" type="text/css" media="all"-->-->
     <!--//booststrap end-->
     <!-- font-awesome icons -->
-    <link href="/Content/About/css/font-awesome.css" rel="stylesheet">
+    <!--link href="/Content/About/css/font-awesome.css" rel="stylesheet">-->
     <!-- //font-awesome icons -->
     <!--stylesheets-->
     <link href="/Content/About/css/style.css" rel='stylesheet' type='text/css' media="all">
@@ -52,7 +52,7 @@
                         <h1><a href="index.html">About Us</a></h1>
                     </div>
                     <div class="menu">
-                        <div class="toggle"></div>
+                        <!--<div class="toggle"></div>
                         <ul class="nav">
                             <li><a href="index.html" class="active"> </a></li>
                             <li><a href="#about" class="scroll"> </a></li>
@@ -60,7 +60,7 @@
                             <li><a href="#gallery" class="scroll"></a></li>
                             <li><a href="#team" class="scroll"></a></li>
                             <li><a href="#contact" class="scroll"> </a></li>
-                        </ul>
+                        </ul>-->
                         <div class="clearfix"> </div>
                     </div>
                 </div>
@@ -75,10 +75,10 @@
                         <div class="slider-img">
                             <div class="container">
                                 <div class="slider-info text-left">
-                                    <h4>
-                                        Recipe World
+                                    <h4  class="text-success">
+                                        World Recipe <br />Blog
                                     </h4>
-                                    <p>Lorem ipsum dolor</p>
+                                    <p>Read and Share your recipes</p>
                                 </div>
                             </div>
                         </div>
