Fixed Enter Here Link HomePage

--- a/RecipeWorld/RecipeWorld/Views/Home/Index.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Home/Index.cshtml
@@ -80,8 +80,9 @@
 <div class="page-header">
     <h1>Enter our World of Recipes</h1>
     <p>Come join us in our culinary adventures around the world where we'll be using simple, fresh ingredients, and transforming them into sophisticated and elegant meals for the everyday home cook.</p>
+    
+    <p>@Html.ActionLink("ENTER HERE", "Index", "Recipe")</p>
   
-    @Html.ActionLink("ENTER HERE", "Index", "Recipe", new { @class = "btn btn-success btn-lg" })
 </div>
 
 
