Report and fixed stuff

--- a/RecipeWorld/RecipeWorld/Views/Home/About.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Home/About.cshtml
@@ -20,7 +20,7 @@
     </script>
     <!--//meta tags ends here-->
     <!--booststrap-->
-    <!--link href="/Content/About/css/bootstrap.css" rel="stylesheet" type="text/css" media="all"-->-->
+    <!--link href="/Content/About/css/bootstrap.css" rel="stylesheet" type="text/css" media="all"-->
     <!--//booststrap end-->
     <!-- font-awesome icons -->
     <!--link href="/Content/About/css/font-awesome.css" rel="stylesheet">-->
@@ -51,18 +51,7 @@
                     <div class="header-logo">
                         <h1><a href="index.html">About Us</a></h1>
                     </div>
-                    <div class="menu">
-                        <!--<div class="toggle"></div>
-                        <ul class="nav">
-                            <li><a href="index.html" class="active"> </a></li>
-                            <li><a href="#about" class="scroll"> </a></li>
-                            <li><a href="#event" class="scroll"></a></li>
-                            <li><a href="#gallery" class="scroll"></a></li>
-                            <li><a href="#team" class="scroll"></a></li>
-                            <li><a href="#contact" class="scroll"> </a></li>
-                        </ul>-->
-                        <div class="clearfix"> </div>
-                    </div>
+                    
                 </div>
                 <div class="clearfix"> </div>
             </div>
@@ -383,7 +372,7 @@
     </div>
     <!-- //gallery -->
     <!-- /testimonials-->
-    <div class="clients" id="clients">
+    <!--<div class="clients" id="clients">
         <div class="container">
             <h3 class="title clr">What Clients Says</h3>
             <div class="pope banner-agileits-btm" id="video">
@@ -584,12 +573,12 @@
     </div>
     <!-- //cantact-->
     <!-- footer-->
-    <footer>
+    <!----><footer>
         <div class="container">
             <div class=" header-side text-center">
                 <p>
                     ©
-                    2018 About Us. Revipe world</a>
+                    2018 About Us. Recipe world
                 </p>
                 <div class="buttom-social-grids">
                     <ul>
