--- a/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Shared/_NavBarSandStone.cshtml
@@ -35,6 +35,8 @@
 
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Create", "Contact")</li>
+                <!-- Admin can see Messages link-->
+                <li>@Html.ActionLink("Messages", "Index", "Contact")</li> 
             </ul>
             @Html.Partial("_LoginPartial")
             
