*remodev unneccessary images

--- a/RecipeWorld/RecipeWorld/Content/About/css/about.css
+++ b/RecipeWorld/RecipeWorld/Content/About/css/about.css
@@ -48,7 +48,7 @@ h3.title {
     font-size: 18px;
     text-align: center;
     color: #fff;
-    background: #6b61e6;
+    background: #93C54B;
     width: 41px;
     height: 42px;
     margin: 0 auto;
