* social media share buttons added

--- a/RecipeWorld/RecipeWorld/Views/Home/About.cshtml
+++ b/RecipeWorld/RecipeWorld/Views/Home/About.cshtml
@@ -6,8 +6,26 @@
 <head>
     <title>About Us</title>
     <link href="/Content/About/css/about.css" rel='stylesheet' type='text/css' media="all">
+    <style>
+        .social-media {
+            padding-top: 10px;
+            margin-left: 20px;
+        }
+    </style>
 </head>
 <body>
+    <!-- Facebook share code starts -->
+    <div id="fb-root"></div>
+    <script>
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <!-- Facebook share code ends -->
     <!--About -->
     <div class="about" id="about">
         <div class="container">
@@ -68,67 +86,107 @@
     </div>
     <!--//About -->
     <!--team-->
-    <div class="team" id="team">
-        <div class="container">
-            <h3 class="title">Our Team</h3>
-            <div class="team-us">
-                <div class="col-sm-4 col-xs-4 team-grid">
-                    <div class="team-members">
-                        <div class="team-avatar">
-                            <img src="/Content/About/images/t1.jpg" class="img-responsive" alt="team">
-                        </div>
-                        <div class="team-desc">
-                            <h4>Valini</h4>
-                            <p>Developer</p>
-                            <div class="team-icons">
-                                <ul>
-                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-rss"></span></a></li>
-                                </ul>
+    <div class="social-wthree-icons bnragile-icons icon-border dribbble">
+        <div class="team" id="team">
+            <div class="container">
+                <h3 class="title">Our Team</h3>
+                <div class="team-us">
+                    <div class="col-sm-4 col-xs-4 team-grid">
+                        <div class="team-members">
+                            <div class="team-avatar">
+                                <img src="/Content/About/images/t1.jpg" class="img-responsive" alt="team">
+                            </div>
+                            <div class="team-desc">
+                                <h4>Valini</h4>
+                                <p>Developer</p>
+                                <div class="team-icons">
+                                    <ul>
+                                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                                        <li><a href="#"><span class="fa fa-rss"></span></a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-4 col-xs-4 team-grid">
-                    <div class="team-members">
-                        <div class="team-avatar">
-                            <img src="/Content/About/images/t2.jpg" class="img-responsive" alt="team">
-                        </div>
-                        <div class="team-desc">
-                            <h4>Suim</h4>
-                            <p>Director</p>
-                            <div class="team-icons">
-                                <ul>
-                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-rss"></span></a></li>
-                                </ul>
+                    <div class="col-sm-4 col-xs-4 team-grid">
+                        <div class="team-members">
+                            <div class="team-avatar">
+                                <img src="/Content/About/images/t2.jpg" class="img-responsive" alt="team">
+                            </div>
+                            <div class="team-desc">
+                                <h4>Suim</h4>
+                                <p>Director</p>
+                                <div class="team-icons">
+                                    <ul>
+                                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                                        <li><a href="#"><span class="fa fa-rss"></span></a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-4 col-xs-4 team-grid">
-                    <div class="team-members">
-                        <div class="team-avatar">
-                            <img src="/Content/About/images/t3.jpg" class="img-responsive " alt="team">
-                        </div>
-                        <div class="team-desc">
-                            <h4>Anita</h4>
-                            <p>Developer</p>
-                            <div class="team-icons">
-                                <ul>
-                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-rss"></span></a></li>
-                                </ul>
+                    <div class="col-sm-4 col-xs-4 team-grid">
+                        <div class="team-members">
+                            <div class="team-avatar">
+                                <img src="/Content/About/images/t3.jpg" class="img-responsive " alt="team">
+                            </div>
+                            <div class="team-desc">
+                                <h4>Anita</h4>
+                                <p>Developer</p>
+                                <div class="team-icons">
+                                    <ul>
+                                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                                        <li><a href="#"><span class="fa fa-rss"></span></a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="clearfix"> </div>
                 </div>
-                <div class="clearfix"> </div>
             </div>
         </div>
     </div>
     <!--//team-->
+    <br /><br /><br />
+    <div class="social-icons" style="background-color:#93C54B">
+        <div class="social-media">
+            <h3 class="title">Share Our Media</h3>
+            <!-- Facebook Share Button -->
+            <div class="fb-share-button" data-href="https://www.facebook.com" data-layout="button_count" data-size="large" data-mobile-iframe="true">
+                <a target="_blank"
+                   href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2F&amp;src=sdkpreparse"
+                   class="fb-xfbml-parse-ignore">
+                    Facebook
+                </a>
+            </div>
+            <br />
+            <!-- Twitter Share Button -->
+            <div>
+                <a href="https://twitter.com/share?ref_src=twsrc%5Etfw"
+                   class="twitter-share-button" data-size="large"
+                   data-lang="en" data-dnt="true" data-show-count="false" data-href="https://twitter.com/">Tweet</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+            <!-- Google Plus Share Button -->
+            <div class="g-plus" data-action="share" data-annotation="bubble" data-height="24" data-href="https://plus.google.com/"></div>
+            <script type="text/javascript">
+                (function () {
+                    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                    po.src = 'https://apis.google.com/js/platform.js';
+                    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+                })();
+            </script>
+            <!-- LinkedIn Share Button -->
+            <div>
+                <script src="//platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+                <script type="IN/Share" data-counter="right">
+                </script>
+            </div>
+            <br />
+        </div>
+    </div>
 </body>
